Corrected missing padding statement that caused hidden elements

--- a/ember-profiler/app/styles/app.css
+++ b/ember-profiler/app/styles/app.css
@@ -71,6 +71,10 @@ body {
     left:0px;
     top: 0px;
 }
+body {
+    /*  This makes the various pieces relatively space, start below the fixed header */
+    padding-top: 50px;
+}
 
 #menuButton {
     position: fixed;
